--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
+  },
+  "volta": {
+    "node": "16.13.0",
+    "yarn": "1.22.17"
   }
 }
